@@ -1,4 +1,7 @@
 2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Taper/Worker.pm: Set input_errors on Recovery error
+
+2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Taper/Scribe.pm (_dbg): Improve debugging
 
 2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
